src/highlight.css
/* ... */
@media (min-width:768px) {
  .logo-above-menu .logo_col {
    min-height: 80px;
    padding-top: 5px;
    padding-bottom: 5px;
    margin: auto;
    -webkit-flex-basis: 100%;
    -moz-flex-basis: 100%;
    -ms-flex-preferred-size: 100%;
    flex-basis: 100%;
    max-width: none;
    max-height: none
  }
  .logo-above-menu .main_menu_col {
    justify-content: center
  }
  .logo-above-menu.fixto-fixed .logo_col {
    max-width: 30%;
    max-height: none;
    height: auto;
    -webkit-flex-basis: auto;
    -moz-flex-basis: auto;
    -ms-flex-preferred-size: auto;
    flex-basis: auto;
    -webkit-box-flex: 0;
    -webkit-flex-grow: 0;
    -moz-flex-grow: 0;
    -ms-flex-positive: 0;
    flex-grow: 0
  }
  .logo-above-menu.fixto-fixed .main_menu_col {
    justify-content: flex-end
  }
  .navigation-bar.logo-inside-menu .logo_col {
    display: none
  }
  .navigation-bar.logo-inside-menu #mainmenu_container, .navigation-bar.logo-inside-menu .main_menu_col {
    width: 100%
  }
  .navigation-bar.logo-inside-menu .navigation-wrapper:not(.gridContainer) {
    padding-left: 15px;
    padding-right: 15px
  }
  .navigation-bar.logo-inside-menu #main_menu {
    text-align: center;
    box-sizing: border-box;
    display: -webkit-box;
    display: -webkit-flex;
    display: -moz-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-flex: 0;
    -webkit-flex: 0 1 auto;
    -moz-box-flex: 0;
    -moz-flex: 0 1 auto;
    -ms-flex: 0 1 auto;
    flex: 0 1 auto;
    -webkit-box-direction: normal;
    -webkit-box-orient: horizontal;
    -webkit-flex-direction: row;
    -moz-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
    -webkit-flex-wrap: wrap;
    -moz-flex-wrap: wrap;
    -ms-flex-wrap: wrap;
    flex-wrap: wrap;
    margin-right: -15px;
    margin-left: -15px;
    -webkit-box-align: center;
    -ms-flex-align: center;
    -webkit-align-items: center;
    -moz-align-items: center;
    align-items: center;
    align-content: center;
    justify-content: center
  }
  .navigation-bar.logo-inside-menu #main_menu a.text-logo, .navigation-bar.logo-inside-menu #main_menu a.text-logo:hover, .navigation-bar.logo-inside-menu #main_menu>li>a.text-logo, .navigation-bar.logo-inside-menu #main_menu>li>a.text-logo:hover {
    text-transform: none;
    text-decoration: none;
    font-weight: 400;
    line-height: 1;
    display: inline-block;
    font-family: Muli, sans-serif;
    font-size: 2.5rem;
    text-align: left;
    color: #fff;
    border: none;
    background: 0 0;
    margin: 0
  }
}

#offcanvas-wrapper, .site {
  -webkit-box-direction: normal;
  -webkit-box-orient: vertical
}

.comment-author .sidebar .fn, .comment-metadata, .contact-form-wrapper input[type=submit], .content-placeholder-p, .footer-7 .widgettitle, .footer-7 h4, .sidebar .comment-author .fn, .sidebar h5, .tags-list a {
  text-transform: uppercase
}

html.has-offscreen body:after {
  content: " ";
  display: block;
  top: 0;
  left: 0;
  height: 100%;
  width: 100%;
  position: fixed;
  background: rgba(34, 43, 52, .7);
  opacity: 0;
  z-index: -1;
  transition: all .5s linear
}

html.has-offscreen.offcanvas-opened {
  overflow-y: auto!important
}

html.has-offscreen.offcanvas-opened body:after {
  opacity: 1;
  z-index: 299
}

.main_menu_col [data-component=offcanvas] {
  color: #fff;
  position: relative;
  text-align: center
}

.main_menu_col [data-component=offcanvas] .bubble {
  position: absolute;
  z-index: 0;
  height: 2.5rem;
  width: 2.5rem;
  background-color: #000;
  opacity: .1;
  border-radius: 100%;
  transition: all .2s linear
}

.main_menu_col [data-component=offcanvas]:hover .bubble {
  opacity: .3
}

.main_menu_col [data-component=offcanvas] i.fa {
  font-size: 1.1rem;
  line-height: 2.5rem;
  height: 2.5rem;
  width: 2.5rem;
  text-align: center;
  position: relative;
  z-index: 1
}

#offcanvas-wrapper {
  transition: transform .3s linear;
  left: auto;
  right: 0;
  background-color: #222B34;
  padding: 0;
  overflow: auto;
  z-index: 99999;
  display: -webkit-box;
  display: -webkit-flex;
  display: -moz-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex: 0;
  -webkit-flex: 0 1 auto;
  -moz-box-flex: 0;
  -moz-flex: 0 1 auto;
  -ms-flex: 0 1 auto;
  flex: 0 1 auto;
  -webkit-flex-direction: column;
  -moz-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column
}

#offcanvas-wrapper.hide {
  display: none
}

#offcanvas-wrapper.force-hide {
  display: none!important;
  width: 0!important;
  overflow: hidden
}

#offcanvas-wrapper .offcanvas-top {
  padding-top: 2rem;
  padding-bottom: 2rem
}

#offcanvas-wrapper .offcanvas-top .logo-holder a {
  color: #fff;
  text-decoration: none;
  font-size: 1.5rem;
  text-align: center;
  display: block
}

#offcanvas-wrapper .offcanvas-top .logo-holder img {
  max-width: 80%;
  display: block;
  margin: auto
}

#offcanvas-wrapper .social-icons {
  bottom: 0;
  padding-bottom: 1rem;
  z-index: 1;
  text-align: center;
  width: 100%
}

#offcanvas-wrapper .social-icons a, #offcanvas-wrapper .social-icons i.fa {
  color: #fff
}

#offcanvas-wrapper .social-icons a {
  display: inline-block;
  text-decoration: none;
  padding: 8px;
  line-height: 1
}

#offcanvas-wrapper .social-icons i.fa {
  font-size: calc(.9rem + .5rem);
  margin-bottom: 0
}

#offcanvas-wrapper #offcanvas-menu {
  -webkit-box-flex: 1;
  -webkit-flex: 1 1 auto;
  -moz-box-flex: 1;
  -moz-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto
}

.offcanvas_menu {
  margin-left: 0;
  list-style: none;
  flex: 1
}

.offcanvas_menu * {
  color: #fff
}

.offcanvas_menu ul {
  list-style: none
}

.offcanvas_menu li {
  color: #fff;
  border-bottom: 1px solid rgba(128, 128, 128, .2);
  font-size: .8rem;
  text-align: left;
  transition: all .1s linear
}

.offcanvas_menu li a {
  text-decoration: none;
  color: inherit;
  position: relative;
  display: block;
  padding: .75rem 0 .75rem 2.5rem;
  font-size: .875rem;
  line-height: 1
}
/* ... */

